@@ -17,4 +17,5 @@
 #undef SOUND_SUPPORTS_MPGLIB
 #undef SOUND_SUPPORTS_QUICKTIME
 #undef SOUND_SUPPORTS_SPEEX
+#undef SOUND_MODPLUG_IN_OWN_PATH
 
